# gotop

./: CHANGELOG.md  Cargo.toml  Gopkg.toml  README.md  main.go
src/: args.rs  main.rs
src/termui/: linegraph.go  sparkline.go  table.go
src/widgets/: battery.go  battery.rs  cpu.go  cpu.rs  disk.go  disk.rs  mem.go  mem.rs  mem_freebsd.go  net.go  net.rs  proc.go  proc.rs  proc_freebsd.go  proc_other.go  statusbar.rs  temp.go  temp.rs  temp_darwin.go  temp_freebsd.go  temp_linux.go  temp_openbsd.go  temp_windows.go
