[package]
name = "gotop"
version = "0.1.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
license = "AGPL-3.0"
description = "A terminal based graphical activity monitor inspired by gtop and vtop"
edition = "2018"

[dependencies]
chrono = "0.4.6"
crossbeam = "0.7.1"
crossterm = "0.9.5"
fern = "0.5.8"
log = "0.4.6"
num_cpus = "1.10.1"
platform-dirs = "0.2.0"
# psutil = { path = "../../other-projects/rust-psutil" }
psutil = "1.5.0"
size = "0.1.2"
structopt = "0.2.16"
tui = { version = "0.6.0", features = ["crossterm"] }
gag = "0.1.10"
serde_json = "1.0.39"
serde = { version = "1.0.92", features = ["derive"] }
